_src/_includes/_assets/css/core.css
/* ... */
.highlight-offside-heading {
  font-weight: bold;
  padding-bottom: 15px;
}

.highlight-section > .post-block {
  padding: 10px 0;
}

.highlight-section > .post-block > .post-body {
  border-left: 4px solid var(--main-blue);
  padding-left: 10px
}

.highlight-section > .post-block > .post-body > .post-meta {
  font-size: 16px;
  padding: 0 0 5px;
}

.highlight-section > .post-block > .post-body > .post-title {
  font-size: 18px;
}

.highlight-section > .post-block > .post-body > .post-title a {
  text-decoration: none;
}

#what_i_do_community {
  grid-column: 2/3;
  grid-row: 2/3;
}

#community_offside {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-items: center;
}

.community-icons {
  display: grid;
  align-items: end;
  justify-items: center;
  grid-template-rows: 1fr 1fr;
  grid-gap: 10px;
}

.community-heading {
  text-align: center;
}

#what_i_do_consultancy {
  grid-column: 1/2;
  grid-row: 3/4;
}
#what_i_do_validation {
  grid-column: 2/3;
  grid-row: 4/5;
}

.post-body-notes {
  font-size: 18px;
}

.post-body-notes a {
  word-break: break-all;
}

.post-body-notes .post-meta {
  padding: 0;
  color: var(--blood-orange);
}

content#doc {
  display: grid;
  grid-template-columns: 1.4fr 4fr;
  padding-top: 60px;
  grid-gap: 30px;
}

content#page, content#search, content#archive, content#generator {
  display: grid;
  grid-template-columns: 1fr;
  padding-top: 60px;
}

#banner_statement {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-content: center;
  font-size: 16px;
  color: #7a7a7a;
}

.banner-statement-individual {
  text-align: center;
}

#Jason_Bayton img {
  width: 500px;
  height: 288px;
}

#intro_block {
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-column-gap: 20px;
}

#intro_heading {
  font-weight: 400;
  font-size: 70px;
}

.home-heading {
  font-weight: 400;
  font-size: 55px;
}

#intro_subheading, .home-subheading {
  font-size: 26px;
}

.partner-heading {
  text-align: center;
}

#intro_cta {
  justify-self: center;
}

#intro_heading p, .home-heading p {
  margin: 0;
}

#intro_text {
grid-column: 1/-1;
}

#intro_android {
  text-align: center;
  font-size: 24px;
  padding: 10px;
}

.cta {
  padding-top: 15px;
}

#android_head {
  margin: 0 auto;
  /* padding-top: 20px; */
  align-self: center;
}

#header_banner {
  background-color: #000000;
  font-size: 12px;
  display: grid;
  justify-content: center;
  justify-items: center;
  padding: 10px;
  align-items: center;
  color: var(--bright);
}

#header_banner a {
  display: inline;
}

#well_hey img {
  max-width: 50px;
  margin: 0;
}

:is(.heading-wrapper :is(h1, h2, h3, h4)) {
  display: inline;
}

:is(.post-content :is(h1, h2, h3, h4)) {
  font-size: 26px;
}

.home-section {
  padding: 100px 40px 0;
  max-width: 1200px;
  justify-self: center;
}

.year-block {
  padding-bottom: 30px;
}

section#page_content {
  min-height: 600px;
  overflow-x: hidden;
}

section#posts_container {
  display: grid;
  grid-template-columns: 1fr;
  background: radial-gradient(circle, #ce3800 0%, #d33900 50%, #FF5722 87%, #fa4006 100%);
  color: var(--bright);
  padding: 100px 0;
  margin-top: 100px;
}

section#posts_container .button {
  background-color: #000000;
  color: var(--bright);
  border: #000000;
}

section#posts_container a {
  color: var(--bright);
}

section#posts {
  max-width: 1900px;
  padding-top: 0;
  padding-bottom: 0;
}

#author_bio {
  padding-top: 20px;
  text-align: right;
  color: var(--blood-orange);
}

.post-block {
  padding: 15px 0;
}

.post-block-extra {
  padding: 30px 0;
}

.post-block-extra img {
  margin: 20px 0;
}

.post-title {
  margin: 0;
  font-weight: 400;
}

.post-meta {
  padding: 10px 0;
  display: block;
}

.post-meta-condensed { 
  font-size: 18px;
}

.post-meta-condensed > .meta-single {
  display: inline;
  padding-right: 20px;
}

#android_post_container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: auto;
  grid-auto-flow: row;
  grid-gap: 40px;
}

.android-topic ul li::marker {
  content: "\f17b";
  font-family: "Font Awesome 5 Brands";
  color: #78c657;
  padding-right: 5px;
}

.android-topic ul {
  padding-inline-start: 25px;
}

.android-topic ul li {
  padding: 0 8px 15px;
}

.android-topic ul li a {
  text-decoration: none;
}

.field {
  padding: 40px 0;
}

.field-qr {
  padding: 10px 0 15px;
}

#searchField {
  padding: 15px;
  font-size: 24px;
  border-radius: 5px;
  width: 100%;
}

.input-text {
  padding: 7px; 
  font-size: inherit; 
  border-radius: 5px; 
  width: 60%;
}

.input-dropdown {
  border: 2px solid black;
  width: 30%;
}

.check {
  padding: 5px 0;
}

.field-title {
  padding-bottom: 5px;
}

#generated_qr img {
  border: 2px solid var(--orange);
  max-width: 512px;
  width: 99%;
  height: auto;
}

#generate_code {
  margin-bottom: 30px;
}

#searchField::placeholder {
  color: var(--light)
}

button#back_button, button#next_button {
  font-size: 22px;
  padding: 10px 40px;
  margin: 0 40px;
}

section#trusted_logos #trusted_container {
  margin: 0 auto;
}

#android-doc-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 40px;
  padding-top: 40px;
}

.trusted-tag {
  font-size: 18px;
  padding-top: 10px;
  font-weight: 500;
}

#vendor_logo_container {
  padding: 20px 30px;
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: auto;
  grid-auto-flow: row;
  border-radius: 5px;
  margin-top: 50px;
  grid-gap: 30px
}

.vendor-logo {
  align-self: center;
  justify-self: center;
}

.vendor-logo img {
  max-width: 100%;
  width: 116px;
  border-radius: 0;
}

#vendor_disclaimer {
  font-size: 12px;
  text-align: center;
  padding-top: 8px;
}

#post_container {
  /*padding-top: 30px;*/
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 50px;
}

#doc_container {
  /*padding-top: 30px;*/
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 30px;
}
/* ... */

